clusters/constellation/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "*.spuxx.dev"
    secretName: spuxx.dev
  rules:
  - host: constellation.spuxx.dev
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 3000
